Colaboratory를 통해 생성됨

--- a/2주차과제.ipynb
+++ b/2주차과제.ipynb
@@ -85,7 +85,7 @@
         "\n",
         "print(\"a = \",type(a),\"b = \", type(b),\"c = \", type(c))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,22 +117,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "96f13364-f1cd-46ed-c702-67a2ba7c6ace"
+        "outputId": "bba4001f-9622-4f4d-d34a-2fd6881ef628"
       },
       "source": [
         "# 주어진 변수(num_list) 직접 수정 불가\n",
         "# for문을 사용 하지 않은 경우 오답처리\n",
         "num_list = [1,2,3,4,5,6,7,8,9]\n",
-        "for num_list\n",
-        "answer = 0\n",
+        "answer=0\n",
+        "for i in range(len(num_list)):\n",
+        "  answer = answer + num_list[i]\n",
         "print(answer)"
       ],
-      "execution_count": 28,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0\n"
+            "45\n"
           ],
           "name": "stdout"
         }
@@ -174,7 +175,7 @@
         "\n",
         "print(year, month, day)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,16 +203,31 @@
       "metadata": {
         "id": "MiGjtBg3r2f_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b307cd23-ef09-4788-b09d-c0572f4f9e38"
       },
       "source": [
         "# 주어진 변수(summary) 직접 수정불가\n",
         "summary = 0\n",
-        "\n",
+        "a = 0\n",
+        "for a in range(0,101):\n",
+        "  summary = summary + a\n",
+        "  \n",
         "print(summary)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5050\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -234,28 +250,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "51cf64ff-36bf-4c6c-8c3d-d1094fab5fbe"
+        "outputId": "8d8bf1f8-320b-4620-df2e-c2cab004081f"
       },
       "source": [
         "# 주어진 변수(hangul) 직접 수정불가\n",
         "hangul = '가나다라마바사'\n",
         "\n",
         "# 출력\n",
-        "hangul[0:-1]"
+        "hangul[::-1]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'가나다라마바'"
+              "'사바마라다나가'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 1
         }
       ]
     },
@@ -276,16 +292,32 @@
       "metadata": {
         "id": "kcUrhpt5c22W",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "230b4fd7-6014-42f0-cd6a-b002902b04e8"
       },
       "source": [
         "# 주어진 변수(num) 직접 수정불가\n",
         "num = \"70 50 90 70\"\n",
-        "\n",
-        "#출력"
+        "num_a = num.split()\n",
+        "num_a = map(int,num_a)\n",
+        "num_a = list(map(int,num_a))\n",
+        "result = sum(num_a)/len(num_a)\n",
+        "#출력\n",
+        "print(result)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "70.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,16 +336,32 @@
       "metadata": {
         "id": "8gwIuAVWdl9Z",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "77037f72-4907-4a0c-e5be-48a1f0a0e705"
       },
       "source": [
         "# 주어진 변수(n) 직접 수정불가\n",
         "n = int(input('숫자를 입력해주세요'))\n",
-        "\n",
+        "if n%2 == 0:\n",
+        "  print(\"짝수입니다.\")\n",
+        "else :\n",
+        "  print(\"짝수가 아닙니다.\")\n",
         "#출력"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "숫자를 입력해주세요2\n",
+            "짝수입니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -336,16 +384,29 @@
       "metadata": {
         "id": "9bEv0Wn3e_Da",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0836a78d-8064-4da6-d15f-b9b9fddf5eef"
       },
       "source": [
         "# 주어진 변수(list_08) 직접 수정불가\n",
         "list_08 = [3, 4]\n",
+        "result = ((((list_08[0])**2) + ((list_08[1]))**2))**0.5\n",
         "\n",
-        "# 출력"
+        "print(result)# 출력\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -363,7 +424,11 @@
       "metadata": {
         "id": "j7MNZZGGuXu0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "3fd5a2ba-42a7-4708-9fc7-3b9c1efba89a"
       },
       "source": [
         "# 주어진 변수(num_10) 직접 수정불가\n",
@@ -371,12 +436,38 @@
         "num_10 = int(input('숫자를 입력해주세요'))\n",
         "\n",
         "def prime_number(n):\n",
-        "    pass\n",
+        "  if n !=1:\n",
+        "    for a in range(2, n):\n",
+        "      if n%a ==0:\n",
+        "        return \"소수가 아닙니다.\"\n",
+        "  else:\n",
+        "        return \"소수가 아닙니다.\"\n",
+        "  return \"소수입니다.\"\n",
         "\n",
         "prime_number(num_10)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "숫자를 입력해주세요17\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'소수입니다.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 170
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -421,7 +512,36 @@
         "colab_type": "text"
       },
       "source": [
-        "#### 정답 : "
+        "#### 정답 : 31"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0s7WwNlaNb2T",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "961f7da4-2a56-4301-de51-2e4ff5f3b4a5"
+      },
+      "source": [
+        "w=3\n",
+        "x=10\n",
+        "b=1\n",
+        "result = w*x+1\n",
+        "print(result)"
+      ],
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "31\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -459,7 +579,41 @@
         "colab_type": "text"
       },
       "source": [
-        "#### 정답 : "
+        "#### 정답 : 25"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hIMdvE3cOD6Y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5384b7f3-af83-43a3-8dda-86e7a0d180d5"
+      },
+      "source": [
+        "W=2\n",
+        "x=[2, 4, 8]\n",
+        "y=[5, 12, 21]\n",
+        "b=[]\n",
+        "for i in x:\n",
+        "  a = W*i\n",
+        "  b.append(a)\n",
+        "  for c,d in zip(b,y):\n",
+        "    result = (c-d)**2\n",
+        "print(result)"
+      ],
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "25\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
