--- a/3주차과제.ipynb
+++ b/3주차과제.ipynb
@@ -104,9 +104,11 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import   numpy as np\n",
+        "np.random.seed(123)\n",
+        "X = np.random.random_sample([5,3]) *10\n"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -114,13 +116,226 @@
       "metadata": {
         "id": "ck00pZqZL9pD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "392d8982-b614-46fb-bd8e-3aaf43c03dfb"
       },
       "source": [
-        ""
+        "import  pandas as pd\n",
+        "variables = ['X','Y','Z']\n",
+        "labels = ['ID_0','ID_1','ID_2','ID_3','ID_4']\n",
+        "df= pd.DataFrame(X,columns=variables,index=labels)\n",
+        "df"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>X</th>\n",
+              "      <th>Y</th>\n",
+              "      <th>Z</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>ID_0</th>\n",
+              "      <td>6.964692</td>\n",
+              "      <td>2.861393</td>\n",
+              "      <td>2.268515</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID_1</th>\n",
+              "      <td>5.513148</td>\n",
+              "      <td>7.194690</td>\n",
+              "      <td>4.231065</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID_2</th>\n",
+              "      <td>9.807642</td>\n",
+              "      <td>6.848297</td>\n",
+              "      <td>4.809319</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID_3</th>\n",
+              "      <td>3.921175</td>\n",
+              "      <td>3.431780</td>\n",
+              "      <td>7.290497</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID_4</th>\n",
+              "      <td>4.385722</td>\n",
+              "      <td>0.596779</td>\n",
+              "      <td>3.980443</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             X         Y         Z\n",
+              "ID_0  6.964692  2.861393  2.268515\n",
+              "ID_1  5.513148  7.194690  4.231065\n",
+              "ID_2  9.807642  6.848297  4.809319\n",
+              "ID_3  3.921175  3.431780  7.290497\n",
+              "ID_4  4.385722  0.596779  3.980443"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XhqsINC3KDK_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "ed929ba2-25cf-498e-d780-36fc18c2a777"
+      },
+      "source": [
+        "from scipy.spatial.distance import pdist, squareform\n",
+        "Y = pdist(df)\n",
+        "Y"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4.973534  , 5.51665266, 5.89988504, 3.83539555, 4.34707339,\n",
+              "       5.10431109, 6.69823298, 7.24426159, 8.31659367, 4.382864  ])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vlym5z1RKPGe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        },
+        "outputId": "789a2939-a43c-48aa-e728-7b442af32f29"
+      },
+      "source": [
+        "row_dist = pd.DataFrame(squareform(pdist(df,metric='euclidean')),columns= labels, index=labels)\n",
+        "from scipy.cluster.hierarchy import linkage\n",
+        "row_clusters=linkage(pdist(df, metric='euclidean'), method='complete')\n",
+        "pd.DataFrame(row_clusters, columns = ['row label 1','row label 2','distance','no. of items in clust.'],index = ['cluster %d' %(i+1) for i in range(row_clusters.shape[0])])\n"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>row label 1</th>\n",
+              "      <th>row label 2</th>\n",
+              "      <th>distance</th>\n",
+              "      <th>no. of items in clust.</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>cluster 1</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>3.835396</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.347073</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 3</th>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>5.899885</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 4</th>\n",
+              "      <td>6.0</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>8.316594</td>\n",
+              "      <td>5.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           row label 1  row label 2  distance  no. of items in clust.\n",
+              "cluster 1          0.0          4.0  3.835396                     2.0\n",
+              "cluster 2          1.0          2.0  4.347073                     2.0\n",
+              "cluster 3          3.0          5.0  5.899885                     3.0\n",
+              "cluster 4          6.0          7.0  8.316594                     5.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "markdown",
