Colaboratory를 통해 생성됨

--- a/4주차과제.ipynb
+++ b/4주차과제.ipynb
@@ -73,10 +73,10 @@
       },
       "source": [
         "### MCP 뉴런\n",
-        ":\n",
+        ": 인간의 뇌의 뉴런과 같은 신경세포를 참고하여 이진 출력을 내는 간단한 논리회로로 표현한것\n",
         "\n",
         "### 퍼셉트론\n",
-        ":\n",
+        ":프랭크 로젠 블릿이 발표한 MCP 뉴런을 활용하여 자동으로 최적의 가중치를 학습하는 알고리즘\n",
         "\n",
         "### 역전파\n",
         ":\n",
@@ -118,6 +118,23 @@
       "source": [
         "![대체 텍스트](https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F0cceeed0-0235-4b0f-af88-0b8c377d5b4b%2F_2020-06-09__9.35.23.png?table=block&id=88fd8912-9356-49a4-9fda-a1a63fe96ea9&width=2870&cache=v2)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ln3EdCyId6AG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "tf.compat.v1.set_random_seed(2020) \n",
+        "x = 1\n",
+        "y = 0\n",
+        "w = tf.random.normal([1],0,1)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
