--- a/4주차과제.ipynb
+++ b/4주차과제.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "4주차 과제.ipynb",
+      "name": "4주차과제.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -122,7 +122,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ln3EdCyId6AG",
+        "id": "8sNw9SS1erc0",
         "colab_type": "code",
         "colab": {}
       },
@@ -131,9 +131,23 @@
         "tf.compat.v1.set_random_seed(2020) \n",
         "x = 1\n",
         "y = 0\n",
-        "w = tf.random.normal([1],0,1)"
+        "w = tf.random.normal([1],0,1)\n",
+        "\n",
+        "import math\n",
+        "def sigmoid(x):\n",
+        "  return 1/(1+math.exp(-x))\n",
+        "\n",
+        "  optput = sigmoid( x * w )\n",
+        "  print(output)\n",
+        "\n",
+        "  for i in range(1000):\n",
+        "    output= sigmoid(x*w)\n",
+        "    w = w+x*0.1 *error#경사하강법\n",
+        "\n",
+        "    if i %100==99:\n",
+        "      print(\"학습 횟수\",i, \"Error:\",error, \"예측결과:\", output)\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
