Colaboratory를 통해 생성됨

--- a/4주차과제.ipynb
+++ b/4주차과제.ipynb
@@ -79,16 +79,16 @@
         ":프랭크 로젠 블릿이 발표한 MCP 뉴런을 활용하여 자동으로 최적의 가중치를 학습하는 알고리즘\n",
         "\n",
         "### 역전파\n",
-        ":\n",
+        ": 다퍼셉트론\n",
         "\n",
         "### 강화학습\n",
-        ":\n",
+        ": 환경이란 개념과 상호작용하여 에이전트의 성능을 향상 시키는 것으로 지도학습과 다르게 피드백이 정답레이블이나 수치가 아니며 보상을 향상시키는 행동을 하도록 학습하는 것 \n",
         "\n",
         "### 과적합\n",
-        ":\n",
+        ": 학습데이터를 과하게 학습하여 학습데이터에서는 정확도가 높지만 실제 데이터에서는 오차가 발생하는 것\n",
         "\n",
         "### 차원의 저주\n",
-        ": \n"
+        ": 고정된 크기의 훈련 데이터셋 차원이 늘어나면서 특정공간이 점점 희소 해지는 현상\n"
       ]
     },
     {
@@ -124,7 +124,11 @@
       "metadata": {
         "id": "8sNw9SS1erc0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "outputId": "dea20f67-deab-4fe8-9fa2-cf8d09773975"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -135,20 +139,39 @@
         "\n",
         "import math\n",
         "def sigmoid(x):\n",
-        "  return 1/(1+math.exp(-x))\n",
+        "  return 1/(1 + math.exp(-x))\n",
         "\n",
-        "  optput = sigmoid( x * w )\n",
-        "  print(output)\n",
+        "output = sigmoid( x * w )\n",
+        "print(output)\n",
         "\n",
-        "  for i in range(1000):\n",
-        "    output= sigmoid(x*w)\n",
-        "    w = w+x*0.1 *error#경사하강법\n",
-        "\n",
-        "    if i %100==99:\n",
-        "      print(\"학습 횟수\",i, \"Error:\",error, \"예측결과:\", output)\n"
+        "for i in range(1000):\n",
+        "  output= sigmoid(x*w)\n",
+        "  error= y - output\n",
+        "  w = w+x*0.1*error\n",
+        "  \n",
+        "  if i %100==99:\n",
+        "      print(\"학습 횟수\",i, \"Error:\",error, \"예측결과:\", output)"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.47477188589261\n",
+            "학습 횟수 99 Error: -0.10010598284299604 예측결과: 0.10010598284299604\n",
+            "학습 횟수 199 Error: -0.05178399422833116 예측결과: 0.05178399422833116\n",
+            "학습 횟수 299 Error: -0.034590451977903586 예측결과: 0.034590451977903586\n",
+            "학습 횟수 399 Error: -0.02588962752851373 예측결과: 0.02588962752851373\n",
+            "학습 횟수 499 Error: -0.020658699939863617 예측결과: 0.020658699939863617\n",
+            "학습 횟수 599 Error: -0.017174253993457355 예측결과: 0.017174253993457355\n",
+            "학습 횟수 699 Error: -0.014689506449480992 예측결과: 0.014689506449480992\n",
+            "학습 횟수 799 Error: -0.012829497265431342 예측결과: 0.012829497265431342\n",
+            "학습 횟수 899 Error: -0.011385568271837804 예측결과: 0.011385568271837804\n",
+            "학습 횟수 999 Error: -0.010232493309882492 예측결과: 0.010232493309882492\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -167,6 +190,16 @@
         "(1) 학습률이 0.2 일 경우 출력층의 노드값\n",
         "\n",
         "(2) 학습률이 0.1과 0.2 중 기대출력값이 지도데이터 \"3\"과 더 가까운 학습률은?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RHKyVWnBf7Yg",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
