--- a/3주차과제.ipynb
+++ b/3주차과제.ipynb
@@ -108,7 +108,7 @@
         "np.random.seed(123)\n",
         "X = np.random.random_sample([5,3]) *10\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
         "df= pd.DataFrame(X,columns=variables,index=labels)\n",
         "df"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,7 +225,7 @@
         "Y = pdist(df)\n",
         "Y"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +259,7 @@
         "row_clusters=linkage(pdist(df, metric='euclidean'), method='complete')\n",
         "pd.DataFrame(row_clusters, columns = ['row label 1','row label 2','distance','no. of items in clust.'],index = ['cluster %d' %(i+1) for i in range(row_clusters.shape[0])])\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +391,11 @@
       "metadata": {
         "id": "LT3q8ACK4ezT",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "18cce85f-e36a-44c1-9446-4813be163629"
       },
       "source": [
         "# W(가중치) 데이터 타입 -> int or float\n",
@@ -400,12 +404,22 @@
         "# cost_func 함수 리턴값 타입 -> float\n",
         "# cost_func 함수 리턴값 = cost 값\n",
         "# W:가중치, x:학습 데이터 y:정답 데이터\n",
-        "\n",
-        "def cost_func(W, x, y):\n",
-        "  pass"
+        "W = int(input('가중치(W)을 입력해주세요.'))\n",
+        "x = [1, 2, 3]\n",
+        "y = [2, 4, 6]\n",
+        "def cost_func(W, x, y):"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-154-76192946e1e1>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    print(zip(x,y)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -432,7 +446,11 @@
       "metadata": {
         "id": "3XfP0-zIXQF6",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 208
+        },
+        "outputId": "255857b4-d95f-4669-d874-be64163e9449"
       },
       "source": [
         "# 여기 코드셀은 변경하지 마세요.\n",
@@ -442,8 +460,20 @@
         "  curr_cost = cost_func(feed_W, x, y)\n",
         "  print(\"{:6.3f} | {:10.5f}\".format(feed_W, curr_cost))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-69-73f7e438fb2e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfeed_W\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mcurr_cost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcost_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeed_W\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{:6.3f} | {:10.5f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeed_W\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurr_cost\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to NoneType.__format__"
+          ]
+        }
+      ]
     }
   ]
 }
